[gd_scene load_steps=6 format=2]

[ext_resource path="res://rogue_chomp_tests/test_character/test_character.gd" type="Script" id=1]
[ext_resource path="res://rogue_chomp_tests/test_maze_generator/test_maze_generator.tscn" type="PackedScene" id=2]
[ext_resource path="res://rogue_chomp/scenes/character/character.tscn" type="PackedScene" id=3]
[ext_resource path="res://rogue_chomp_tests/test_end_node.tscn" type="PackedScene" id=4]
[ext_resource path="res://rogue_chomp_tests/test_start_node.tscn" type="PackedScene" id=5]

[node name="TestCharacter" type="Node2D" index="0"]

script = ExtResource( 1 )

[node name="TestMazeGenerator" parent="." index="0" instance=ExtResource( 2 )]

[node name="Character" parent="." index="1" instance=ExtResource( 3 )]

SPEED = 65

[node name="TestEndNode" parent="." index="2" instance=ExtResource( 4 )]

[node name="TestStartNode" parent="." index="3" instance=ExtResource( 5 )]

[node name="CanvasLayer" type="CanvasLayer" parent="." index="4"]

layer = 1
offset = Vector2( 0, 0 )
rotation = 0.0
scale = Vector2( 1, 1 )
transform = Transform2D( 1, 0, 0, 1, 0, 0 )

[node name="VBoxContainer" type="VBoxContainer" parent="CanvasLayer" index="0"]

anchor_left = 0.0
anchor_top = 0.0
anchor_right = 1.0
anchor_bottom = 0.0
margin_bottom = 32.0
rect_pivot_offset = Vector2( 0, 0 )
rect_clip_content = false
mouse_filter = 1
mouse_default_cursor_shape = 0
size_flags_horizontal = 1
size_flags_vertical = 1
alignment = 0

[node name="$DEBUG" type="Label" parent="CanvasLayer/VBoxContainer" index="0"]

anchor_left = 0.0
anchor_top = 0.0
anchor_right = 0.0
anchor_bottom = 0.0
margin_right = 320.0
margin_bottom = 14.0
rect_pivot_offset = Vector2( 0, 0 )
rect_clip_content = false
mouse_filter = 2
mouse_default_cursor_shape = 0
size_flags_horizontal = 1
size_flags_vertical = 4
autowrap = true
percent_visible = 1.0
lines_skipped = 0
max_lines_visible = -1


